Expiration class added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,11 @@ file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
 list(REMOVE_ITEM SRC_FILES ${PROJECT_SOURCE_DIR}/src/main.cpp)
 
 # Compile source files into a library
-add_library(combinations_lib ${SRC_FILES} src/Ratio.cpp)
+add_library(combinations_lib ${SRC_FILES} src/Ratio.cpp src/Epiration.cpp)
 target_link_libraries(combinations_lib PUBLIC xml_lib std::filesystem)
 
 # Main is separate
-add_executable(combinations ${PROJECT_SOURCE_DIR}/src/main.cpp include/TemplateCombination.h include/TemplateComponent.h include/Ratio.h)
+add_executable(combinations ${PROJECT_SOURCE_DIR}/src/main.cpp include/TemplateCombination.h include/TemplateComponent.h include/Ratio.h include/Expiration.h)
 
 
 # linking Main against the library
